example_2/y.output

state 0
	$accept: .input $end 

	STRING  shift 4
	.  error

	expr  goto 2
	term  goto 3
	input  goto 1

state 1
	$accept:  input.$end 

	$end  accept
	.  error


state 2
	input:  expr.    (1)
	expr:  expr.'+' term 

	'+'  shift 5
	.  reduce 1 (src line 33)


state 3
	expr:  term.    (3)

	.  reduce 3 (src line 39)


state 4
	term:  STRING.    (4)

	.  reduce 4 (src line 42)


state 5
	expr:  expr '+'.term 

	STRING  shift 4
	.  error

	term  goto 6

state 6
	expr:  expr '+' term.    (2)

	.  reduce 2 (src line 37)


5 terminals, 4 nonterminals
5 grammar rules, 7/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
53 working sets used
memory: parser 3/240000
0 extra closures
3 shift entries, 1 exceptions
4 goto entries
0 entries saved by goto default
Optimizer space used: output 7/240000
7 table entries, 1 zero
maximum spread: 5, maximum offset: 5
